--- a/common.bg.po
+++ b/common.bg.po
@@ -5,6 +5,7 @@
 # Translators:
 # 411370735b8ef90fa32c21e58a50941e_d905c03 <7784313cf022f885419b74f26eaf98f3_541595>, 2016-2017
 # Krasimir Mikov, 2022
+# Krasimir Mikov, 2022
 # set_killer <mettall@abv.bg>, 2014
 # Nik Dim <lilo@abv.bg>, 2020
 # ubone <van_ds_ff@mail.bg>, 2016
@@ -75,7 +76,7 @@ msgstr "^3Играч^7: Това е мястото чатене"
 #: qcsrc/client/hud/panel/engineinfo.qc:75
 #, c-format
 msgid "FPS: %.*f"
-msgstr "FPS: %.*f"
+msgstr "К/С: %.*f"
 
 #: qcsrc/client/hud/panel/infomessages.qc:92
 msgid "^1Observing"
@@ -798,7 +799,7 @@ msgstr "SCO^ранг"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:153
 msgid "Number of flag returns"
-msgstr ""
+msgstr "Брой връщания на знамето"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:153
 msgid "SCO^returns"
@@ -830,7 +831,7 @@ msgstr "Общ резултат"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:157
 msgid "Number of suicides"
-msgstr ""
+msgstr "Брой самоубийства"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:157
 msgid "SCO^suicides"
@@ -838,7 +839,7 @@ msgstr "SCO^самоубийства"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:158
 msgid "Number of kills minus deaths"
-msgstr ""
+msgstr "Брой убийства без умиранията"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:158
 msgid "SCO^sum"
@@ -846,7 +847,7 @@ msgstr "SCO^сума"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:159
 msgid "Number of domination points taken (Domination)"
-msgstr ""
+msgstr "Брой точки за доминация (Domination)"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:159
 msgid "SCO^takes"
@@ -854,15 +855,15 @@ msgstr "SCO^взимания"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:160
 msgid "Number of teamkills"
-msgstr ""
+msgstr "Брой убийства на съотборници"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:160
 msgid "SCO^teamkills"
-msgstr ""
+msgstr "SCO^убийства на съотборници"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:161
 msgid "Number of ticks (Domination)"
-msgstr ""
+msgstr "Брой отмервания (Domination)"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:161
 msgid "SCO^ticks"
@@ -870,16 +871,18 @@ msgstr "SCO^щракания"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:162
 msgid "SCO^time"
-msgstr ""
+msgstr "SCO^време"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:162
 msgid "Total time raced (Race/CTS)"
-msgstr ""
+msgstr "Общо време на състезаване (Race/CTS)"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:694
 msgid ""
 "You can modify the scoreboard using the ^2scoreboard_columns_set command."
 msgstr ""
+"Можете да променяте таблото като използвате командата "
+"^2scoreboard_columns_set."
 
 #: qcsrc/client/hud/panel/scoreboard.qc:695
 msgid "Usage:"
@@ -887,7 +890,7 @@ msgstr "Употреба:"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:697
 msgid "^2scoreboard_columns_set ^3field1 field2 ..."
-msgstr ""
+msgstr "^2scoreboard_columns_set ^3поле1 поле2 ..."
 
 #: qcsrc/client/hud/panel/scoreboard.qc:698
 msgid ""
@@ -909,11 +912,12 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/scoreboard.qc:701
 msgid "You can use a ^3|^7 to start the right-aligned fields."
-msgstr ""
+msgstr "Може да използвате ^3|^7 за да започнете дясно-подравнените полета."
 
 #: qcsrc/client/hud/panel/scoreboard.qc:702
 msgid "The following field names are recognized (case insensitive):"
 msgstr ""
+"Следните имена на полета са разпознати (без значение от малки и големи букви)"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:708
 msgid ""
@@ -922,28 +926,41 @@ msgid ""
 "or in all but these game types. You can also specify 'all' as a\n"
 "field to show all fields available for the current game mode."
 msgstr ""
+"Преди поле може да сложите знак + или -, след това списък разделен от "
+"запетаи\n"
+"на типовете игра, след това наклонена черта, за да направите списъка видим "
+"само на онези\n"
+"или на всички с изключение на тези. Също може да укажете 'all' като\n"
+"поле, за да се виждат всички възможни полета за избрания тип на игра."
 
 #: qcsrc/client/hud/panel/scoreboard.qc:714
 msgid ""
 "The special game type names 'teams' and 'noteams' can be used to\n"
 "include/exclude ALL teams/noteams game modes."
 msgstr ""
+"Специалните имена на игрови типове 'teams' и 'noteams' могат да се използват "
+"да\n"
+"включат/изключат ВСИЧКИ teams/noteams типове на игра"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:718
 msgid "Example: scoreboard_columns_set name ping pl | +ctf/field3 -dm/field4"
-msgstr ""
+msgstr "Пример: scoreboard_columns_set име ping pl | +ctf/field3 -dm/field4"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:719
 msgid ""
 "will display name, ping and pl aligned to the left, and the fields\n"
 "right of the vertical bar aligned to the right."
 msgstr ""
+"ще покаже име, пинг и pl подредени в ляво и полетата\n"
+"дясно от вертикалния бар, подредени в дясно."
 
 #: qcsrc/client/hud/panel/scoreboard.qc:721
 msgid ""
 "'field3' will only be shown in CTF, and 'field4' will be shown in all\n"
 "other gamemodes except DM."
 msgstr ""
+"'field3' ще се показва само в CTF, а 'field4' ще се показва във всички\n"
+"типове на игра, без DM"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:1000
 #: qcsrc/client/hud/panel/scoreboard.qc:1007
@@ -964,7 +981,7 @@ msgstr "Точност (средно %d%%)"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:1789
 msgid "Item stats"
-msgstr ""
+msgstr "Статистики на предмета"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:1900
 msgid "Map stats:"
@@ -1006,13 +1023,13 @@ msgstr ""
 #: qcsrc/client/hud/panel/scoreboard.qc:2281
 #, c-format
 msgid "^3%1.0f minutes"
-msgstr ""
+msgstr "^3%1.0f минути"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2290
 #: qcsrc/client/hud/panel/scoreboard.qc:2297
 #, c-format
 msgid "^5%s %s"
-msgstr ""
+msgstr "^5%s %s"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2291
 #: qcsrc/client/hud/panel/scoreboard.qc:2298
@@ -1025,22 +1042,22 @@ msgstr "SCO^точки"
 #: qcsrc/client/hud/panel/scoreboard.qc:2323
 #, c-format
 msgid "^2+%s %s"
-msgstr ""
+msgstr "^2+%s %s"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2332
 #, c-format
 msgid "^7Map: ^2%s"
-msgstr ""
+msgstr "^7Карта: ^2%s"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2494
 #, c-format
 msgid "Speed award: %d%s ^7(%s^7)"
-msgstr ""
+msgstr "Награда за скорост: %d%s ^7(%s^7)"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2498
 #, c-format
 msgid "All-time fastest: %d%s ^7(%s^7)"
-msgstr ""
+msgstr "Най-добро време %d%s ^7(%s^7)"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2532
 #, c-format
@@ -1059,48 +1076,49 @@ msgstr "Мъртав сте, натиснете ^2%s^7 за съживяване
 
 #: qcsrc/client/hud/panel/strafehud.qc:879
 msgid "qu"
-msgstr ""
+msgstr "qu"
 
 #: qcsrc/client/hud/panel/strafehud.qc:880
 msgid "m"
-msgstr ""
+msgstr "м"
 
 #: qcsrc/client/hud/panel/strafehud.qc:881
 msgid "km"
-msgstr ""
+msgstr "км"
 
 #: qcsrc/client/hud/panel/strafehud.qc:882
 msgid "mi"
-msgstr ""
+msgstr "ми"
 
 #: qcsrc/client/hud/panel/strafehud.qc:883
 msgid "nmi"
-msgstr ""
+msgstr "нми"
 
 #: qcsrc/client/hud/panel/timer.qc:132
 msgid "Warmup"
-msgstr ""
+msgstr "Загряване"
 
 #: qcsrc/client/hud/panel/timer.qc:134
 msgid "Timeout"
-msgstr ""
+msgstr "Таймаут"
 
 #: qcsrc/client/hud/panel/timer.qc:136
 msgid "Sudden Death"
-msgstr ""
+msgstr "Внезапна Смърт"
 
 #: qcsrc/client/hud/panel/timer.qc:138
 msgid "Overtime"
-msgstr ""
+msgstr "Допълнително време"
 
 #: qcsrc/client/hud/panel/timer.qc:140
 #, c-format
 msgid "Overtime #%d"
-msgstr ""
+msgstr "Допълнително време #%d"
 
 #: qcsrc/client/hud/panel/vote.qc:30
 msgid "^1You must answer before entering hud configure mode"
 msgstr ""
+"^1Трябва да отговорите преди да влезнете в режим за конфигуриране на HUD"
 
 #: qcsrc/client/hud/panel/vote.qc:33
 msgid "^2Name ^7instead of \"^1Anonymous player^7\" in stats"
@@ -1185,7 +1203,7 @@ msgstr "Арена с всички оръжия"
 #: qcsrc/client/main.qc:1361
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:27
 msgid "All Available Weapons Arena"
-msgstr ""
+msgstr "Арена с Всички Оръжия"
 
 #: qcsrc/client/main.qc:1362
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:28
@@ -1195,12 +1213,12 @@ msgstr "Арена с повечето оръжия"
 #: qcsrc/client/main.qc:1363
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:29
 msgid "Most Available Weapons Arena"
-msgstr ""
+msgstr "Арена с Повечето Оръжия"
 
 #: qcsrc/client/main.qc:1366 qcsrc/client/main.qc:1380
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:50
 msgid "No Weapons Arena"
-msgstr ""
+msgstr "Арена Без Оръжия"
 
 #: qcsrc/client/main.qc:1378
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:48
@@ -1211,37 +1229,38 @@ msgstr "%s Арена"
 #: qcsrc/client/main.qc:1389 qcsrc/client/main.qc:1394
 #, c-format
 msgid "This is %s"
-msgstr ""
+msgstr "Това е %s"
 
 #: qcsrc/client/main.qc:1390
 msgid "Your client version is outdated."
-msgstr ""
+msgstr "Вашата версия е стара."
 
 #: qcsrc/client/main.qc:1391
 msgid "### YOU WON'T BE ABLE TO PLAY ON THIS SERVER ###"
-msgstr ""
+msgstr "### НЯМА ДА ИМАТЕ ВЪЗМОЖНОСТ ДА ИГРАЕТЕ НА ТОЗИ СЪРВЪР ###"
 
 #: qcsrc/client/main.qc:1392
 msgid "Please update!"
-msgstr ""
+msgstr "Моля обновете!"
 
 #: qcsrc/client/main.qc:1395
 msgid "This server is using an outdated Xonotic version."
-msgstr ""
+msgstr "Този сървър използва стара версия на Xonotic."
 
 #: qcsrc/client/main.qc:1396
 msgid "### THIS SERVER IS INCOMPATIBLE AND THUS YOU CANNOT JOIN ###"
 msgstr ""
+"### ТОЗИ СЪРВЪР Е НЕСЪВМЕСТИМ И СЛЕДОВАТЕЛНО НЕ МОЖЕ ДА СЕ ПРИСЪЕДИНИТЕ ###"
 
 #: qcsrc/client/main.qc:1398
 #, c-format
 msgid "Welcome to %s"
-msgstr ""
+msgstr "Добре дошли в %s"
 
 #: qcsrc/client/main.qc:1413 qcsrc/menu/xonotic/campaign.qc:244
 #, c-format
 msgid "Level %d:"
-msgstr ""
+msgstr "Ниво %d:"
 
 #: qcsrc/client/main.qc:1415
 #, c-format
@@ -1255,15 +1274,15 @@ msgstr "Режим на игра:"
 
 #: qcsrc/client/main.qc:1440
 msgid "Active modifications:"
-msgstr ""
+msgstr "Активни модификации:"
 
 #: qcsrc/client/main.qc:1443
 msgid "Special gameplay tips:"
-msgstr ""
+msgstr "Специални игрални съвети:"
 
 #: qcsrc/client/main.qc:1450
 msgid "MOTD:"
-msgstr ""
+msgstr "СНД:"
 
 #: qcsrc/client/main.qc:1528
 #, c-format
@@ -1299,22 +1318,23 @@ msgstr "остават %d секунди"
 #: qcsrc/client/mapvoting.qc:513
 msgid "mv_mapdownload: ^3You're not supposed to use this command on your own!"
 msgstr ""
+"mv_mapdownload: ^3Не би трябвало да използвате тази команда самостоятелно!"
 
 #: qcsrc/client/mapvoting.qc:523
 msgid "^1Error:^7 Couldn't find pak index."
-msgstr ""
+msgstr "^1Грешка:^7 Не може да намери индекс."
 
 #: qcsrc/client/mapvoting.qc:532
 msgid "Requesting preview..."
-msgstr ""
+msgstr "Изискване на преглед..."
 
 #: qcsrc/client/view.qc:889
 msgid "Nade timer"
-msgstr ""
+msgstr "Таймер на гранати"
 
 #: qcsrc/client/view.qc:894
 msgid "Capture progress"
-msgstr ""
+msgstr "Напредък на превземане"
 
 #: qcsrc/client/view.qc:899
 msgid "Revival progress"
@@ -1322,7 +1342,7 @@ msgstr "Процес на съживяване"
 
 #: qcsrc/common/command/generic.qc:156
 msgid "error creating curl handle"
-msgstr ""
+msgstr "грешка при създаването на curl манипулатор"
 
 #: qcsrc/common/gamemodes/gamemode/assault/assault.qh:8
 msgid "Assault"
@@ -1441,6 +1461,8 @@ msgid ""
 "Kill enemies to freeze them, stand next to frozen teammates to revive them; "
 "freeze all enemies to win"
 msgstr ""
+"Убий противниците, за да ги замразиш, стой до съотборниците, за да ги "
+"свестиш, замрази всички противници, за да спечелиш"
 
 #: qcsrc/common/gamemodes/gamemode/invasion/invasion.qh:8
 msgid "Invasion"
@@ -1500,7 +1522,7 @@ msgstr ""
 
 #: qcsrc/common/gamemodes/gamemode/nexball/weapon.qh:9
 msgid "Ball Stealer"
-msgstr ""
+msgstr "Крадеца на Топката"
 
 #: qcsrc/common/gamemodes/gamemode/onslaught/onslaught.qh:8
 msgid "Capture control points to reach and destroy the enemy generator"
@@ -1542,23 +1564,23 @@ msgstr "Team Deathmatch"
 
 #: qcsrc/common/items/item/ammo.qh:52
 msgid "bullets"
-msgstr ""
+msgstr "патрони"
 
 #: qcsrc/common/items/item/ammo.qh:82
 msgid "cells"
-msgstr ""
+msgstr "клетки"
 
 #: qcsrc/common/items/item/ammo.qh:112
 msgid "plasma"
-msgstr ""
+msgstr "плазма"
 
 #: qcsrc/common/items/item/ammo.qh:142
 msgid "rockets"
-msgstr ""
+msgstr "ракети"
 
 #: qcsrc/common/items/item/ammo.qh:176
 msgid "shells"
-msgstr ""
+msgstr "патрони за пушка"
 
 #: qcsrc/common/items/item/armor.qh:42
 msgid "Small armor"
@@ -1596,15 +1618,15 @@ msgstr "Мега аптечка"
 #: qcsrc/common/util.qc:263
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:173
 msgid "Jetpack"
-msgstr ""
+msgstr "Реактивна раница"
 
 #: qcsrc/common/items/item/jetpack.qh:71
 msgid "fuel"
-msgstr ""
+msgstr "гориво"
 
 #: qcsrc/common/items/item/jetpack.qh:96
 msgid "Fuel regenerator"
-msgstr ""
+msgstr "Горивен регенератор"
 
 #: qcsrc/common/items/item/jetpack.qh:99
 msgid "Fuel regen"
@@ -1627,7 +1649,7 @@ msgstr "Изход"
 
 #: qcsrc/common/minigames/cl_minigames_hud.qc:368
 msgid "Invite"
-msgstr ""
+msgstr "Покани"
 
 #: qcsrc/common/minigames/cl_minigames_hud.qc:407
 msgid "Current Game"
@@ -1635,7 +1657,7 @@ msgstr "Текуща Игра"
 
 #: qcsrc/common/minigames/cl_minigames_hud.qc:431
 msgid "Exit Menu"
-msgstr ""
+msgstr "Излез от Менюто"
 
 #: qcsrc/common/minigames/cl_minigames_hud.qc:442
 #: qcsrc/menu/xonotic/dialog_multiplayer.qc:16
@@ -1657,7 +1679,7 @@ msgstr ""
 
 #: qcsrc/common/minigames/minigame/bd.qc:2
 msgid "Bulldozer"
-msgstr ""
+msgstr "Булдозер"
 
 #: qcsrc/common/minigames/minigame/bd.qc:1107
 #: qcsrc/common/minigames/minigame/ps.qc:425
@@ -1677,7 +1699,7 @@ msgstr ""
 #: qcsrc/common/minigames/minigame/ps.qc:498
 #: qcsrc/common/minigames/minigame/ttt.qc:329
 msgid "You are spectating"
-msgstr ""
+msgstr "Вие наблюдавате"
 
 #: qcsrc/common/minigames/minigame/bd.qc:1184
 msgid "Better luck next time!"
@@ -1728,7 +1750,7 @@ msgstr ""
 #: qcsrc/common/minigames/minigame/pp.qc:374
 #, c-format
 msgid "%s^7 won the game!"
-msgstr ""
+msgstr "%s^7 спечели играта!"
 
 #: qcsrc/common/minigames/minigame/c4.qc:384
 #: qcsrc/common/minigames/minigame/pp.qc:450
@@ -1813,7 +1835,7 @@ msgstr ""
 #: qcsrc/common/minigames/minigame/pp.qc:456
 #: qcsrc/common/minigames/minigame/ttt.qc:339
 msgid "Select \"^1Next Match^7\" on the menu for a rematch!"
-msgstr ""
+msgstr "Избери \"^1Next Match^7\" от менюто, за да започнеш нов мач!"
 
 #: qcsrc/common/minigames/minigame/pp.qc:457
 #: qcsrc/common/minigames/minigame/pp.qc:463
@@ -2340,7 +2362,7 @@ msgstr "^BG ^TC^TT^BG знаме бе върнато в базата от соб
 
 #: qcsrc/common/notifications/all.inc:234
 msgid "^BGThe flag was returned by its owner"
-msgstr ""
+msgstr "^BGЗнамето бе върнато в базата от собственика си"
 
 #: qcsrc/common/notifications/all.inc:235
 msgid "^BGThe ^TC^TT^BG flag was destroyed and returned to base"
@@ -2348,7 +2370,7 @@ msgstr "^BG ^TC^TT^BG знаме бе унищожено и върнато в б
 
 #: qcsrc/common/notifications/all.inc:236
 msgid "^BGThe flag was destroyed and returned to base"
-msgstr ""
+msgstr "^BGЗнамето бе унищожено и върнато в базата"
 
 #: qcsrc/common/notifications/all.inc:237
 msgid "^BGThe ^TC^TT^BG flag was dropped in the base and returned itself"
@@ -2356,7 +2378,7 @@ msgstr "^BG ^TC^TT^BG знаме бе изтървано и върнато в б
 
 #: qcsrc/common/notifications/all.inc:238
 msgid "^BGThe flag was dropped in the base and returned itself"
-msgstr ""
+msgstr "^BGЗнамето бе изтървано в базата и се върна само"
 
 #: qcsrc/common/notifications/all.inc:239
 msgid ""
@@ -2368,7 +2390,7 @@ msgstr ""
 
 #: qcsrc/common/notifications/all.inc:240
 msgid "^BGThe flag fell somewhere it couldn't be reached and returned to base"
-msgstr ""
+msgstr "^BGЗнамето падна на недостижимо място и се върна в базата"
 
 #: qcsrc/common/notifications/all.inc:241
 #, c-format
@@ -2383,7 +2405,7 @@ msgstr ""
 #, c-format
 msgid ""
 "^BGThe flag became impatient after ^F1%.2f^BG seconds and returned itself"
-msgstr ""
+msgstr "^BGЗнамето нямаше търпение и след ^F1%.2f^BG секунди се върна само"
 
 #: qcsrc/common/notifications/all.inc:243
 msgid "^BGThe ^TC^TT^BG flag has returned to the base"
@@ -2391,7 +2413,7 @@ msgstr "^BG ^TC^TT^BG знаме бе върнато в базата"
 
 #: qcsrc/common/notifications/all.inc:244
 msgid "^BGThe flag has returned to the base"
-msgstr ""
+msgstr "^BGЗнамето се върна в базата"
 
 #: qcsrc/common/notifications/all.inc:245
 #, c-format
@@ -2444,7 +2466,7 @@ msgstr "^F2Ще наблюдаваш в следващия рунд"
 #: qcsrc/common/notifications/all.inc:261
 #, c-format
 msgid "^BG%s%s^K1 was killed by ^BG%s^K1's ^BG%s^K1 buff ^K1%s%s"
-msgstr ""
+msgstr "^BG%s%s^K1 бе убит от ^BG%s^K1's ^BG%s^K1 buff ^K1%s%s"
 
 #: qcsrc/common/notifications/all.inc:261
 #, c-format
@@ -2484,7 +2506,7 @@ msgstr "^BG%s%s^K1 бе сготвен от ^BG%s^K1%s%s"
 #: qcsrc/common/notifications/all.inc:267
 #, c-format
 msgid "^BG%s%s^K1 was pushed in front of a monster by ^BG%s^K1%s%s"
-msgstr ""
+msgstr "^BG%s%s^K1 бе избутан пред чудовище от ^BG%s^K1%s%s"
 
 #: qcsrc/common/notifications/all.inc:268
 #, c-format
@@ -2499,17 +2521,17 @@ msgstr "^BG%s%s^K1 се доближи твърде близко до напал
 #: qcsrc/common/notifications/all.inc:269
 #, c-format
 msgid "^BG%s%s^K1 was burned to death by ^BG%s^K1's Napalm Nade%s%s"
-msgstr ""
+msgstr "^BG%s%s^K1 беше изгорен от ^BG%s^K1 с Напалмова Граната%s%s"
 
 #: qcsrc/common/notifications/all.inc:270
 #, c-format
 msgid "^BG%s%s^K1 was blown up by ^BG%s^K1's Ice Nade%s%s"
-msgstr ""
+msgstr "^BG%s%s^K1 беше взривен от ^BG%s^K1 с Ледена Граната%s%s"
 
 #: qcsrc/common/notifications/all.inc:271
 #, c-format
 msgid "^BG%s%s^K1 was frozen to death by ^BG%s^K1's Ice Nade%s%s"
-msgstr ""
+msgstr "^BG%s%s^K1 беше замразен до смърт от ^BG%s^K1 с Ледена Граната%s%s"
 
 #: qcsrc/common/notifications/all.inc:272
 #, c-format
