--- a/common.pl.po
+++ b/common.pl.po
@@ -20,6 +20,7 @@
 # Karol Kosek, 2020
 # Kriss Chr <kriss7475@gmail.com>, 2017
 # Marcin Nogaj, 2022
+# Marcin Nogaj, 2022
 # Piotr Kozica <koza91@gmail.com>, 2016
 # Rafał Szymański <okavasly@gmail.com>, 2017
 # Robert Wolniak <robert.wolniak@gmail.com>, 2015,2018
@@ -34,7 +35,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-07-24 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Marcin Nogaj, 2022\n"
+"Last-Translator: SFS Atlas, 2022\n"
 "Language-Team: Polish (http://www.transifex.com/team-xonotic/xonotic/"
 "language/pl/)\n"
 "Language: pl\n"
